--- a/consolidate_Data_with_Keyword_Sources.ipynb
+++ b/consolidate_Data_with_Keyword_Sources.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LDA_data_dir = './new_data/Data_with_keywords/Data_with_keywords/LDA/'"
+    "LDA_data_dir = './LDA/'"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "autop_files =  ['clinicTrial_LDA_cat_output.csv','pubMed_LDA_cat_output.csv']"
+    "    autop_files =  ['clinicTrial_LDA_cat_output.csv','pubMed_LDA_cat_output.csv']"
    ]
   },
   {
@@ -172,9 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allData_dict_PTR = {'pubmed' : ['preProc_PubMed_RAKE.csv','pubMed_LDA_cat_output.csv'],\n",
-    "                   'clinictrial' : ['preProc_ClinTrials_RAKE.csv','clinicTrial_LDA_cat_output.csv'],\n",
-    "                   'nih': ['preProc_NIH_RAKE.csv']}"
+    "allData_dict_PTR = {'pubmed' : ['preProc_PubMed_RAKE.csv','pubMed_LDA_cat_output.csv','clinical_data_output_withkeyword.csv'],\n",
+    "                   'clinictrial' : ['preProc_ClinTrials_RAKE.csv','clinicTrial_LDA_cat_output.csv','clinical_data_output_withkeyword.csv'],\n",
+    "                   'nih': ['preProc_NIH_RAKE.csv', 'NIH_data_output_withkeyword.csv']}"
    ]
   },
   {
