--- a/create_nodes_edges.ipynb
+++ b/create_nodes_edges.ipynb
@@ -36,15 +36,15 @@
     "    '''Restrict nodes/edges to those pertaining to data that matched between data sources'''\n",
     "    if dtype == 'pubmed':\n",
     "        # Load entity matching results\n",
-    "        df1 = pd.read_csv('ENTITY_MATCH_OUTPUT/data_matching_Project_IMP_columnsOnly_pubmedclinicTrial.csv')\n",
-    "        df2 = pd.read_csv('ENTITY_MATCH_OUTPUT/data_matching_Project_IMP_columnsOnly_pubmedNIH.csv')\n",
+    "        df1 = pd.read_csv('ENTITY_MATCH_OUTPUT/pubMED_vs_clinicTrial/data_matching_Project_IMP_columnsOnly.csv')\n",
+    "        df2 = pd.read_csv('ENTITY_MATCH_OUTPUT/pubMED_vs_nih/data_matching_Project_IMP_columnsOnly.csv')\n",
     "        # List ids that matched\n",
     "        ids = list(np.unique(df1['pubMed'].to_list()+df2['pubMed'].to_list()))\n",
     "    elif dtype == 'nih':\n",
-    "        df1 = pd.read_csv('ENTITY_MATCH_OUTPUT/data_matching_Project_IMP_columnsOnly_pubmedNIH.csv')\n",
+    "        df1 = pd.read_csv('ENTITY_MATCH_OUTPUT/pubMED_vs_nih/data_matching_Project_IMP_columnsOnly.csv')\n",
     "        ids = df1['clinicTrial'].to_list()\n",
     "    elif dtype == 'clintrial':\n",
-    "        df1 = pd.read_csv('ENTITY_MATCH_OUTPUT/data_matching_Project_IMP_columnsOnly_pubmedclinicTrial.csv')\n",
+    "        df1 = pd.read_csv('ENTITY_MATCH_OUTPUT/pubMED_vs_clinicTrial/data_matching_Project_IMP_columnsOnly.csv')\n",
     "        ids = df1['clinicTrial'].to_list()\n",
     "    return df.iloc[ids]"
    ]
@@ -92,9 +92,9 @@
     "    return \n",
     "\n",
     "# Define input files to use\n",
-    "pubmed_file = 'new_data/data_with_ontology_terms/pubMed.csv'\n",
-    "clintrials_file = 'new_data/data_with_ontology_terms/clinTrials.csv'\n",
-    "nih_file = 'new_data/data_with_ontology_terms/NIH.csv'\n",
+    "pubmed_file = 'data_with_ontology_terms/pubMed.csv'\n",
+    "clintrials_file = 'data_with_ontology_terms/clinTrials.csv'\n",
+    "nih_file = 'data_with_ontology_terms/NIH.csv'\n",
     "save_dir = 'nodes_and_edges'\n",
     "\n",
     "# Pubmed Authors\n",
@@ -292,12 +292,12 @@
    "outputs": [],
    "source": [
     "# Pubmed to Clinical Trials\n",
-    "pb_ct = pd.read_csv('ENTITY_MATCH_OUTPUT/data_matching_Project_IMP_columnsOnly_pubmedclinicTrial.csv')\n",
+    "pb_ct = pd.read_csv('ENTITY_MATCH_OUTPUT/pubMED_vs_clinicTrial/data_matching_Project_IMP_columnsOnly.csv')\n",
     "pb_ct = pb_ct.rename(columns={'pubMed':'id_Source','clinicTrial':'id_Target'})\n",
     "pb_ct[['id_Source','id_Target']].to_csv(os.path.join(save_dir,'pubmed_clintrials_edges.csv'))\n",
     "\n",
     "# Pubmed to NIH\n",
-    "pb_nih = pd.read_csv('ENTITY_MATCH_OUTPUT/data_matching_Project_IMP_columnsOnly_pubmedNIH.csv')\n",
+    "pb_nih = pd.read_csv('ENTITY_MATCH_OUTPUT/pubMED_vs_nih/data_matching_Project_IMP_columnsOnly.csv')\n",
     "pb_nih = pb_nih.rename(columns={'pubMed':'id_Source','clinicTrial':'id_Target'})\n",
     "pb_ct[['id_Source','id_Target']].to_csv(os.path.join(save_dir,'pubmed_nih_edges.csv'))"
    ]
@@ -305,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
